--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./sass/index.scss">
+    <link rel="stylesheet" href="../css/index.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h2>Hello world</h2>
+    <header>
+        <div class="logo">
+            <p>**logo**</p>
+        </div>
+        <div class = "search">
+            <h1 class="search-header">FIND BEST EVENTS AROUND THE WORLD</h1>
+            <div class="search-inputs">
+                <input class="search-by-name" type="text" placeholder="Start searching">
+                <input class="search-by-country" type="text" placeholder="Choose country">
+            </div>
+        </div>
+    </header>
     <main>
         <section class="main-section1">
             <ul class="list-cards">
