--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./sass/index.scss">
+    <link rel="stylesheet" href="../css/index.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400&display=swap" rel="stylesheet">
@@ -16,6 +16,7 @@
         <section class="main-section1">
             <ul class="list-cards">
                 <li class="event-1 event">
+                    <div class=""></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
@@ -130,6 +131,12 @@
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-20 event">
+                    <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
+                    <h3>Eurovision 2021 finals!</h3>
+                    <h4>2021-05-13</h4>
+                    <p>Palace of Ukraine</p>
+                </li>
+                <li class="event-21 event">
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
