--- a/src/index.html
+++ b/src/index.html
@@ -162,18 +162,9 @@
     </main>
 
     <footer>
-        <ul class="listPages">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>...</li>
-            <li>29</li>
-        </ul>
         <div>
-            <h4 class="footerText1">© 2021 | All Rights Reserved |</h4>
-            <h4 class="footerText2">Developed with <img> by GoIT Students</h4>
+            <a href="#">© 2023 | All Rights Reserved |
+            Developed with ❤️ by GoITeens Students</a>
         </div>
     </footer>
 </body>
