add image in main

--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,12 @@
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
+                    <li class="event-21 event">
+                    <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
+                    <h3>Eurovision 2021 finals!</h3>
+                    <h4>2021-05-13</h4>
+                    <p>Palace of Ukraine</p>
+                </li>
             </ul>
         </section>
         <section class="nav-bar">
