--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,10 @@
         <div class = "search">
             <h1 class="search-header">FIND BEST EVENTS AROUND THE WORLD</h1>
             <div class="search-inputs">
-                <input class="search-by-name" type="text" placeholder="Start searching">
+               <form class="search-form">
+                    <input class="search-by-s" type="text" placeholder="Start searching">
+                    <button type="submit"><svg class="icon icon-search"><use href="../sprite.svg#icon-search_icon"></use></svg></button>
+                </form>
                 <!-- <input class="search-by-country" type="text" placeholder="Choose country"> -->
                 <select class="search-by-country">
                     <option value="country">country</option>
