--- a/src/index.html
+++ b/src/index.html
@@ -185,5 +185,6 @@
             Developed with ❤️ by GoITeens Students</a>
         </div>
     </footer>
+    <script src="./js/index.js"></script>
 </body>
 </html>
