--- a/src/index.html
+++ b/src/index.html
@@ -273,126 +273,147 @@
         <section class="main-section1">
             <ul class="list-cards">
                 <li class="event-1 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
-                <li  class="event-2 event">
+                <li class="event-2 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>֩֩Palace of Ukraine</p>
                 </li>
                 <li class="event-3 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-4 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-5 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-6 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg" >
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-7 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg" >
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-8 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-9 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-10 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-11 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li  class="event-12 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li  class="event-13 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li  class="event-14 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li  class="event-15 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li  class="event-16 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li  class="event-17 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-18 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li  class="event-19 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-20 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
                 </li>
                     <li class="event-21 event">
+                    <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
