--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,7 @@
     <main>
         <section class="main-section1">
             <ul class="list-cards">
-                <li class="event-1 event">
+              <!--   <li class="event-1 event">
                     <div class="ramka-event"></div>
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
@@ -284,7 +284,7 @@
                     <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg">
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
-                    <p>֩֩Palace of Ukraine</p>
+                    <p>Palace of Ukraine</p>
                 </li>
                 <li class="event-3 event">
                     <div class="ramka-event"></div>
@@ -418,7 +418,7 @@
                     <h3>Eurovision 2021 finals!</h3>
                     <h4>2021-05-13</h4>
                     <p>Palace of Ukraine</p>
-                </li>
+                </li> -->
             </ul>
         </section>
         <section class="nav-bar">
