add api events and minor fix

--- a/src/index.html
+++ b/src/index.html
@@ -503,7 +503,7 @@
         </div>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type = "module"></script>
 
 </body>
 </html>
