--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sass/index.scss">
-    <title>Document</title>
+    <title>Event boster</title>
 </head>
 <body>
+    <div class="mask">
+        <div class="loader"></div>
+    </div>
     <header>
         <div class="logo-container">
             <svg class="svg-logo">
