--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                     <button class="search-by-s-btn" type="submit"><svg class="icon icon-search"><use href="../sprite.svg#icon-search_icon"></use></svg></button>
                 </form>
                 <select class="search-by-country">
-                    <option value="Choose country">Choose country</option>
+                    <option value="">Choose country</option>
                 </select>
             </div>
         </div>
