info about event in modal

--- a/src/index.html
+++ b/src/index.html
@@ -41,32 +41,30 @@
                         <span class="svg-close">&times;</span>
                     </div>
                     <div class="head-image">
-                        <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg" alt="">
+                        <img class="event-image-head" src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg" alt="">
                     </div>
                     <div class="center">
                         <div class="main-image">
-                            <img src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg" alt="something">
+                            <img class="main-event-image" src="http://s1.ticketm.net/dam/a/063/1689bfea-ae98-4c7e-a31d-bbca2dd14063_54361_RECOMENDATION_16_9.jpg" alt="something">
                         </div>
                         <div class="all-info">
                             <div class="info">
                                 <h2>INFO</h2>
-                                <p>Atlas Weekend is the largest music festival in Ukraine.
-                                    More than 200 artists will create
-                                    a proper music festival atmosphere on 10 stages</p>
+                                <p class="info-text">No info available</p>
                             </div>
                             <div class="when">
                                 <h2>WHEN</h2>
-                                <p>2021-06-09</p>
-                                <p>20:00 (Kyiv/Ukraine)</p>
+                                <p class="date">2021-06-09</p>
+                                <p class="time">20:00 (Kyiv/Ukraine)</p>
                             </div>
                             <div class="where">
                                 <h2>WHERE</h2>
-                                <p>Kyiv, Ukraine</p>
-                                <p>VDNH</p>
+                                <p class="location">Kyiv, Ukraine</p>
+                                <p class="place">VDNH</p>
                             </div>
                             <div class="who">
                                 <h2>WHO</h2>
-                                <p>The Black Eyed Peas</p>
+                                <p class="who-name">The Black Eyed Peas</p>
                             </div>
                             <div class="prices">
                                 <h2>PRICES</h2>
@@ -74,14 +72,14 @@
                                     <svg hight="16" width="24">
                                         <use href="../sprite.svg#icon-ticket_prices"></use>
                                     </svg>
-                                    <p>Standart 300-500 UAH</p>
+                                    <p class="standart-price">Standart 50-130 USD</p>
                                 </div>
                                     <button class="buy-tickets">BUY TICKETS</button>
                                 <div class="vip-ticket">
                                     <svg hight="16" width="24">
                                         <use href="../sprite.svg#icon-ticket_prices"></use>
                                     </svg>
-                                    <p>VIP 1000-1500 UAH</p>
+                                    <p class="vip-price">VIP 210-400 USD</p>
                                 </div>
                                     <button class="buy-tickets">BUY TICKETS</button>
                             </div>
