--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                             <svg class="icon icon-search-country"><use href="../sprite.svg#icon-search_icon"></use></svg>
                         </div> -->
                       <ul class="options">
-                        <li value=" " class="countryLi">All countries</li>
+                        <li value="nothing" class="countryLi">All countries</li>
                       </ul>
                     </div>
                 </div>
