--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,18 @@
     <div class="mask">
         <div class="loader"></div>
     </div>
-    <header>
-        <div class="logo-container">
-            <svg class="svg-logo">
-                <use href="../sprite.svg#icon-logo"></use>
-            </svg>
+    <header >
+        <div class="header_thema_and_logo">
+            <div class="logo-container">
+                <svg class="svg-logo">
+                    <use href="../sprite.svg#icon-logo"></use>
+                </svg>
+            </div>
+            <div class="thema">
+                <button type="button" class="page-theme dark" id="swicthMode"></button>
+            </div>
         </div>
+
         <div class = "search">
             <h1 class="search-header">FIND BEST EVENTS AROUND THE WORLD</h1>
             <div class="search-inputs">
@@ -106,6 +112,6 @@
         </div>
     </footer>
     <script src="js/index.js" type = "module"></script>
-
+    <script src="js/theme_white_and_dark.js" type="module"></script>
 </body>
 </html>
