--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,6 @@
         </div>
     </footer>
     <script src="js/index.js" type = "module"></script>
-    <script src="js/theme_white_and_dark.js" type="module"></script>
+    <!-- <script src="js/theme_white_and_dark.js" type="module"></script> -->
 </body>
 </html>
