plus light mode

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,12 @@
                     <use href="../sprite.svg#icon-logo"></use>
                 </svg>
             </div>
-            <div class="thema">
+            <!-- <div class="thema">
                 <button type="button" class="page-theme dark" id="swicthMode"></button>
+            </div> -->
+            <div class="thema-mode">
+                <svg class="icon"><use href="../sprite.svg#icon-dark"></use></svg>
+                <!-- <svg class="icon icon-light"><use href="../sprite.svg#icon-light"></use></svg> -->
             </div>
         </div>
         <div class = "search">
