--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/icon-logo.ico">
     <link rel="stylesheet" href="sass/index.scss">
     <title>Event boster</title>
 </head>
@@ -25,7 +26,8 @@
                 <button type="button" class="page-theme dark" id="swicthMode"></button>
             </div> -->
             <div class="thema-mode">
-                <svg class="icon"><use href="../sprite.svg#icon-dark"></use></svg>
+                <svg class="icon-sun"><use href="../sprite.svg#icon-sun"></use></svg>
+                <svg class="icon-moon"><use href="../sprite.svg#icon-moon"></use></svg>
                 <!-- <svg class="icon icon-light"><use href="../sprite.svg#icon-light"></use></svg> -->
             </div>
         </div>
